--- a/src/index.html
+++ b/src/index.html
@@ -96,13 +96,13 @@
             <h4>项目概述</h4>
             <ul>
               <li>
-                使用Vue全家桶实现的一款单页面<strong>移动端</strong>记账应用。
+                使用<strong>Vue全家桶</strong>实现的一款单页面<strong>移动端</strong>记账应用。
               </li>
               <li>
                 使用<strong>VueRouter</strong>将应用划分为记账，标签，统计三个分页面，实现了记账信息保存，标签管理，数据统计展示等主要功能。
               </li>
               <li>
-                使用<strong>Vuex+LocalStorage</strong>实现状态管理，将记账信息和标签信息存储在LocalStorage中.
+                使用<strong>Vuex+LocalStorage</strong>实现状态管理，将记账信息和标签信息存储在<strong>LocalStorage</strong>中。
               </li>
           </div>
           <div class="show">
@@ -121,8 +121,8 @@
               </div>
             </div>
             <p>
-              React，Redux，React Redux，React Router，TypeScript，SCSS，
-              SVG绘制，axios，antd，dayjs，lodash
+              React，Redux，React Redux，React Router，TypeScript，<strong>SCSS</strong>，
+              SVG，axios，antd，dayjs，lodash
             </p>
           </div>
           <div class="detail">
@@ -159,7 +159,7 @@
             </div>
 
             <p>
-              是以reveal.js为基础，使用原生JS添加了一些小功能制作的一款演讲工具。
+              是以reveal.js为基础，使用<strong>原生JS</strong>添加了一些小功能制作的一款演讲工具。
             </p>
           </div>
           <div class="detail">
@@ -311,10 +311,10 @@
       <div class="detail">
         <ul>
           <li>熟悉页面制作技巧，能将设计稿完美还原成页面</li>
-          <li>熟练使用HTML5标签编写语义化的页面</li>
+          <li>熟练使用<strong>HTML5标签</strong>编写语义化的页面</li>
           <li>熟练使用CSS/SCSS，文档流，盒模型，flex布局</li>
-          <li>掌握JavaScript，ES6，DOM操作，AJAX，跨域，闭包，原型链，this的使用和概念</li>
-          <li>熟悉ES6，包括let/Promise/await/析构赋值等</li>
+          <li>掌握JavaScript，DOM操作，AJAX，<strong>跨域</strong>，<strong>闭包</strong>，<strong>原型链</strong>，<strong>this</strong>的使用和概念</li>
+          <li>熟悉<strong>ES6</strong>，包括let/Promise/await/析构赋值等</li>
           <li>熟悉<strong>前后端分离</strong>技术，包括AJAX，跨域，前端路由，Cookie，Session等</li>
           <li>熟练掌握<strong>Vue全家桶</strong>的使用，包括Vue-cli、VueRouter、Vuex等</li>
           <li>熟练掌握<strong>React全家桶</strong>的使用，包括create-react-app、ReactRouter、Redux等</li>
