旺财项目更新完毕

--- a/src/index.html
+++ b/src/index.html
@@ -124,12 +124,12 @@
             <div class="header">
               <h4>使用技术</h4>
               <div class="a-wrapper">
-                <a href="https://github.com/CFCode-git/moneygrubber-test-1">源码链接</a>
-                <a href="https://chow1027.xyz/moneygrubber-1-website/#/money">扫码查看</a>
+                <a href="https://github.com/CFCode-git/moneygrubber-test-2.0">源码链接</a>
+                <a href=" https://chowq.gitee.io/moneygrubber2.0-website">扫码查看</a>
               </div>
             </div>
             <p>
-              Vue，Vue Router，Vuex，<strong>TypeScript</strong>，SCSS，LocalStorage，dayjs
+              Vue，Vue Router，Vuex，<strong>TypeScript</strong>，SCSS，LocalStorage，SessionStorage，dayjs，ECharts
             </p>
           </div>
           <div class="detail">
@@ -146,7 +146,7 @@
               </li>
           </div>
           <div class="show">
-            <img src="./images/monry.png" alt="扫一扫二维码直达体验!" />
+            <img src="./images/gitee_qrcode2.png" alt="扫一扫二维码直达体验!" />
           </div>
         </div>
 
@@ -226,7 +226,7 @@
     </section>
     <section class="openSource">
       <span class="iconfont icon-openSource"></span>
-      <h2>开源项目</h2>
+      <h2>个人项目</h2>
       <hr />
       <div class="detail">
 
