--- a/src/index.html
+++ b/src/index.html
@@ -119,31 +119,34 @@
       <div class="detail">
 
         <div class="timeline-panel">
-          <h3>—— 小财迷记账</h3>
+          <h3>—— 小财迷记账(移动端)</h3>
           <div class="usedSkill">
             <div class="header">
               <h4>使用技术</h4>
               <div class="a-wrapper">
                 <a href="https://github.com/CFCode-git/moneygrubber-test-2.0">源码链接</a>
-                <a href=" https://chowq.gitee.io/moneygrubber2.0-website">扫码查看</a>
+                <a href=" https://chowq.gitee.io/moneygrubber2.0-website">预览地址</a>
               </div>
             </div>
             <p>
-              Vue，Vue Router，Vuex，<strong>TypeScript</strong>，SCSS，LocalStorage，SessionStorage，dayjs，ECharts
+              Vue，Vue
+              Router，Vuex，<strong>TypeScript</strong>，SCSS，LocalStorage，SessionStorage，dayjs，<strong>ECharts</strong>
             </p>
           </div>
           <div class="detail">
             <h4>项目概述</h4>
             <ul>
+              <li>从自己的需求触发，借鉴鲨鱼记账APP的设计制作的记账应用。</li>
               <li>
-                使用<strong>Vue全家桶</strong>实现的一款单页面<strong>移动端</strong>记账应用。
+                是一款基于<strong>Vue全家桶</strong>和<strong>TypeScript</strong>实现的单页面<strong>移动端</strong>应用。
               </li>
               <li>
-                使用<strong>VueRouter</strong>将应用划分为记账，标签，统计三个分页面，实现了记账信息保存，标签管理，数据统计展示等主要功能。
+                使用<strong>Vue Router</strong>将应用划分为记账，图表和明细三个分页面，实现了计算器，记账信息保存，数据统计，图表展示等主要功能。
               </li>
               <li>
                 使用<strong>Vuex+LocalStorage</strong>实现状态管理，将记账信息和标签信息存储在<strong>LocalStorage</strong>中。
               </li>
+              <li>源码几乎完全使用TypeScript实现，用到了装饰器语法。</li>
           </div>
           <div class="show">
             <img src="./images/gitee_qrcode2.png" alt="扫一扫二维码直达体验!" />
@@ -162,22 +165,24 @@
             </div>
             <p>
               React，Redux，React Redux，React Router，TypeScript，<strong>SCSS</strong>，
-              SVG，axios，antd，dayjs，lodash
+              SVG，<strong>axios</strong>，<strong>antd</strong>，dayjs，lodash
             </p>
           </div>
           <div class="detail">
             <h4>项目描述</h4>
             <ul>
               <li>
-                使用<strong>React + React Router + Redux + axios</strong>实现注册/登录/跳转页面的功能。
+                是一款基于<strong>React全家桶</strong>实现的番茄闹钟应用。
+              </li>
+              <li>使用<strong>React Router + axios</strong>实现注册/登录/跳转页面的功能，采用了Ant Design设计。</li>
+              <li>
+                使用SVG绘制折线图，dayjs处理日期，lodash处理数据。
               </li>
               <li>
-                使用SVG绘制折线图。
-              </li>
-              <li>
-                使用<strong>Hooks API</strong>完成倒计时功能模块。
+                在倒计时功能模块上实践了<strong>Hooks API</strong>。
               </li>
               <li>详细的历史记录，并可对记录进行修改，恢复和删除。</li>
+              <li>目前移动端的页面正在逐步开发中。</li>
             </ul>
           </div>
           <div class="pomodoro">
@@ -188,38 +193,38 @@
 
 
         <div class="timeline-panel" id="page2">
-          <h3>—— 极简PPT</h3>
+          <h3>—— Miraculous PPT</h3>
           <div class="usedSkill">
             <div class="header">
               <h4>使用技术</h4>
               <div class="a-wrapper">
-                <a href="https://github.com/CFCode-git/OneSlide">源码链接</a>
-                <a href="https://chow1027.xyz/OneSlide/demo.html#/">项目预览</a>
+                <a href="https://github.com/CFCode-git/MiraculousPPT1.0">源码链接</a>
+                <a href="https://chowq.gitee.io/miraculousppt1.0">项目预览</a>
               </div>
             </div>
-
             <p>
-              是以reveal.js为基础，使用<strong>原生JS</strong>添加了一些小功能制作的一款演讲工具。
+              是以reveal.js为基础制作的一款在线演讲工具。
+              使用<strong>原生JS</strong>添加了控制台，简化用户操作。
+              通过<strong>LocalStorage</strong>存储Markdown内容。
             </p>
           </div>
           <div class="detail">
             <h4>功能描述</h4>
             <p>
-              一款使用Markdown语法快速制作PPT的在线应用。
-              拥抱极简主义，让工作更高效。
+              是一款使用Markdown语法快速制作PPT的在线应用。
+              支持图片上传、主题切换、动画效果更改、导出PDF等常用功能。
             </p>
             <h4>主要技术点：</h4>
             <ul>
               <li>将Markdown转化成PPT上的文字。</li>
               <li>
-                使用<strong>leancloud</strong>增强编辑器的<strong>上传图片</strong>功能。
+                使用<strong>LeanCloud</strong>增强编辑器的<strong>上传图片</strong>功能。
               </li>
             </ul>
           </div>
-
           <div class="pomodoro">
-            <img src="./images/oneSlide1.png" alt="展示效果1" />
-            <img src="./images/oneSlide2.png" alt="展示效果2" />
+            <img src="./images/MiraculousPPT1.png" alt="展示效果1" />
+            <img src="./images/MiraculousPPT2.png" alt="展示效果2" />
           </div>
         </div>
 
@@ -231,24 +236,24 @@
       <div class="detail">
 
         <div class="timeline-panel">
-          <h3>—— 画一只皮卡丘</h3>
+          <h3>—— 画一只小哆啦</h3>
           <div class="usedSkill">
             <div class="header">
               <h4>项目概述</h4>
               <div class="a-wrapper">
-                <a href="https://chow1027.xyz/cartoon-pikachu-1/src/test.html">预览地址</a>
-                <a href="https://github.com/CFCode-git/cartoon-pikachu-1">源码链接</a>
+                <a href="https://chowq.gitee.io/doraemon1.0">预览地址</a>
+                <a href="https://github.com/CFCode-git/Doraemon1.0">源码链接</a>
               </div>
             </div>
             <p>
-              学习CSS3动画的时候做的一个小作品。
+              学习CSS3的时候做的一个小作品。使用了CSS3新特性transition和transform添加淡入效果，适配移动端。
             </p>
           </div>
           <div class="detail">
 
           </div>
           <div class="pomodoro">
-            <img src="./images/pikachu.png" alt="展示效果">
+            <img src="./images/Doraemon.png" alt="展示效果">
           </div>
         </div>
 
@@ -258,12 +263,12 @@
             <div class="header">
               <h4>项目概述</h4>
               <div class="a-wrapper">
-                <a href="https://chow1027.xyz/nav-1/dist/index.html">预览地址</a>
+                <a href="https://chowq.gitee.io/nav-1">预览地址</a>
                 <a href="https://github.com/CFCode-git/nav-1">源码链接</a>
               </div>
             </div>
             <p>
-              使用jQuery制作的导航网站。
+              学习使用jQuery的时候制作的导航网站。
               添加网址时获取首字母到快捷方式，敲击快捷方式对应的字母前往对应的网址。
             </p>
           </div>
@@ -272,16 +277,13 @@
           </div>
         </div>
 
-
-
-
         <div class="timeline-panel" id="page3">
           <h3>—— 简易画板</h3>
           <div class="usedSkill">
             <div class="header">
               <h4>项目概述</h4>
               <div class="a-wrapper">
-                <a href="http://chow1027.xyz/canvas-drawingboard/">预览地址</a>
+                <a href="https://chowq.gitee.io/canvas-drawingboard/">预览地址</a>
                 <a href="https://github.com/CFCode-git/canvas-drawingboard">源码链接</a>
               </div>
             </div>
