--- a/src/index.html
+++ b/src/index.html
@@ -314,17 +314,17 @@
             </div>
             <div class="icon-list">
               <span class="iconfont icon-phone"></span>
-              18024148185
+              <a href="tel:18024148185">18024148185</a>
             </div>
             <div class="icon-list">
-              <span class="iconfont icon-wechat"></span>
-              wojiaozhougong
+              <span class="iconfont icon-email"></span>
+              <a href="mailto:435184766@qq.com">435184766@qq.com</a>
             </div>
           </div>
           <div class="secondList">
             <div class="icon-list">
-              <span class="iconfont icon-email"></span>
-              435184766@qq.com
+              <span class="iconfont icon-wechat"></span>
+              wojiaozhougong
             </div>
             <div class="icon-list">
               <span class="iconfont icon-github"></span>
@@ -371,9 +371,6 @@
         </ul>
       </div>
     </section>
-
-
-
     <section class="blog">
       <span class="iconfont icon-map"></span>
       <h2>我的博客</h2>
@@ -400,14 +397,6 @@
         </div>
       </div>
     </section>
-
-
-
-
-
-
-
-
 
     <!-- <section id="page4">
       <span class="iconfont icon-map"></span>
