添加工作经历

--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,19 @@
     section .skill-bar li {
       margin-top: 4px;
     }
+
+    section.works .detail .education.work {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      margin: 0 48px;
+    }
+
+    section.works .detail .education.work * {
+      padding: 5px;
+      margin: 0;
+    }
   </style>
 </head>
 
@@ -396,6 +409,28 @@
                 href="https://chow1027.xyz/2019/js%E5%87%BD%E6%95%B0%E7%9A%84%E6%89%A7%E8%A1%8C%E6%97%B6%E6%9C%BA/">JS函数的执行时机</a>
             </li>
           </ul>
+        </div>
+      </div>
+    </section>
+    <section class="works">
+      <span class="iconfont icon-education"></span>
+      <h2>工作经历</h2>
+      <hr />
+      <div class="detail">
+        <div class="timeline-panel education work">
+          <p class="content">从事测绘工程相关职业。</p>
+        </div>
+        <div class="timeline-panel education work">
+          <p class="date">2018 年 9 月 - 2019 年 7 月</p>
+          <p class="content">江门市勘测院有限公司</p>
+        </div>
+        <div class="timeline-panel education work">
+          <p class="date">2018 年 7 月 - 至今</p>
+          <p class="content">广州市番禺城市规划设计院</p>
+        </div>
+        <div class="timeline-panel education work">
+          <p class="date">自学前端</p>
+          <p class="content">从2019年10月开始自学前端知识</p>
         </div>
       </div>
     </section>
