--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
               Router，Vuex，<strong>TypeScript</strong>，SCSS，LocalStorage，SessionStorage，dayjs，<strong>ECharts</strong>
             </p>
           </div>
-          <div class="detail">
+          <div class="detail morney">
             <h4>项目概述</h4>
             <ul>
               <li>从自己的需求触发，借鉴鲨鱼记账APP的设计制作的记账应用。</li>
