--- a/src/index.html
+++ b/src/index.html
@@ -417,20 +417,17 @@
       <h2>工作经历</h2>
       <hr />
       <div class="detail">
-        <div class="timeline-panel education work">
+        <!-- <div class="timeline-panel education work">
           <p class="content">从事测绘工程相关职业。</p>
-        </div>
-        <div class="timeline-panel education work">
+        </div> -->
+        <!-- <div class="timeline-panel education work">
           <p class="date">2018 年 9 月 - 2019 年 7 月</p>
           <p class="content">江门市勘测院有限公司</p>
-        </div>
+        </div> -->
         <div class="timeline-panel education work">
           <p class="date">2018 年 7 月 - 至今</p>
-          <p class="content">广州市番禺城市规划设计院</p>
-        </div>
-        <div class="timeline-panel education work">
-          <p class="date">自学前端</p>
-          <p class="content">从2019年10月开始自学前端知识</p>
+          <!-- <p class="content">广州市番禺城市规划设计院</p> -->
+          <p class="content">从事测绘工程相关职业。</p>
         </div>
       </div>
     </section>
