--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
     <figure>
       <img src="./images/square-photo1.jpg" alt="头像" />
       <figcaption>周啟尧</figcaption>
-      <p>应聘前端工程师</p>
+      <p>应聘前端工程师 | 1年项目经验</p>
     </figure>
   </header>
   <main>
@@ -420,14 +420,15 @@
         <!-- <div class="timeline-panel education work">
           <p class="content">从事测绘工程相关职业。</p>
         </div> -->
-        <!-- <div class="timeline-panel education work">
-          <p class="date">2018 年 9 月 - 2019 年 7 月</p>
-          <p class="content">江门市勘测院有限公司</p>
-        </div> -->
         <div class="timeline-panel education work">
-          <p class="date">2018 年 7 月 - 至今</p>
-          <!-- <p class="content">广州市番禺城市规划设计院</p> -->
-          <p class="content">从事测绘工程相关职业。</p>
+          <!-- <p class="date">2018 年 9 月 - 2019 年 7 月</p> -->
+          <!-- <p class="content">江门市勘测院有限公司</p> -->
+          <p class="content">碧桂园集团</p>
+        </div>
+        <div class="timeline-panel education work">
+          <!-- <p class="date">2018 年 7 月 - 至今</p> -->
+          <p class="content">广州市番禺城市规划设计院</p>
+          <!-- <p class="content">从事测绘工程相关职业。</p> -->
         </div>
       </div>
     </section>
