--- a/src/index.html
+++ b/src/index.html
@@ -426,6 +426,10 @@
           <p class="content">碧桂园集团</p>
         </div>
         <div class="timeline-panel education work">
+          <!-- <p class="date">2018 年 9 月 - 2019 年 7 月</p> -->
+          <p class="content">江门市勘测院有限公司</p>
+        </div>
+        <div class="timeline-panel education work">
           <!-- <p class="date">2018 年 7 月 - 至今</p> -->
           <p class="content">广州市番禺城市规划设计院</p>
           <!-- <p class="content">从事测绘工程相关职业。</p> -->
